syntax = "proto3";
option java_package="com.bchenault.association.protobuf";
package associations;

import "google/protobuf/wrappers.proto";

service AssociationService {
    rpc CreateElement (CreateElementRequest) returns (CreateElementResponse) {}
    // associates two elements with one another by a provided type
    // if the elements provided do not have an id, new ones will be created
    // if ids are provided, the graph is checked for their existence and if they exist an association is created for existing elements
    rpc SetAssociation (SetAssociationRequest) returns (SetAssociationResponse) {}

    rpc GetElements (GetElementsRequest) returns (GetElementsResponse) {}

    // this endpoint is paginated
    rpc GetAssociations (GetAssociationsRequest) returns (GetAssociationsResponse) {}
}

message CreateElementRequest {
    string name = 1;

    string element_type = 2;

    map<string, string> properties = 3;
}

message CreateElementResponse {
    google.protobuf.StringValue id = 1;
}

message SetAssociationRequest {
    Association association_request = 1;
}

message SetAssociationResponse {
    Association created_association = 1;
}

message GetElementsRequest {
    oneof element_selector {
        string id_selector = 1;
        PropertySelector property_selector = 2;
    }
}

message GetElementsResponse {
    repeated Element elements = 1;
}

message PropertySelector {
    map<string, string> properties = 1;
}

message GetAssociationsRequest {
    oneof from_selector {
        string id_selector = 1;
        PropertySelector property_selector = 2;
    }
    // passing in no value will return all associations
    google.protobuf.StringValue association_type = 3;

    int32 first_result = 4;
    int32 result_count = 5;
    bool count_only = 6;
    bool return_all = 7;
}

message GetAssociationsResponse {
    repeated Association associations = 1;

    int32 total_size = 2;
}

message Element {
    google.protobuf.StringValue id = 1;
    string name = 2;
    string element_type = 3;

    map<string, string> properties = 4;
}

message Association {
    Element from_element = 1;
    Element to_element = 2;
    string association_type = 3;
}